force-app/main/default/objects/Step__c/fields/Detailed_Instructions_Link__c.field-meta.xml
<CustomField>
    <fullName>Detailed_Instructions_Link__c</fullName>
    <description>Link to the detailed instructions to accomplish this step.</description>
    <inlineHelpText>Link to the detailed instructions to accomplish this step.</inlineHelpText>
    <label>Detailed Instructions Link</label>
    <type>Url</type>
</CustomField>