force-app/main/default/objects/Step__c/fields/Path__c.field-meta.xml
<CustomField>
    <fullName>Path__c</fullName>
    <description>Path this step belongs to</description>
    <inlineHelpText>Path this step belongs to</inlineHelpText>
    <label>Path</label>
    <referenceTo>Path__c</referenceTo>
    <relationshipLabel>Steps</relationshipLabel>
    <relationshipName>Steps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>